manifests/operators/gpu/nfd-subscription.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-nfd
