manifests/operators/gpu/nvidia-subscription.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nvidia-gpu-operator
